// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate({"email":"err","displayName":"err","website":"err"}) 1`] = `
Object {
  "data": Object {
    "display_name": "err",
    "email": "err",
    "website": "err",
  },
  "errors": Array [
    Array [
      "email",
      "The email address is invalid.",
    ],
    Array [
      "displayName",
      "Invalid length.",
    ],
    Array [
      "website",
      "The URL is invalid.",
    ],
  ],
}
`;

exports[`validate({"email":"test@example.com","displayName":"test","website":"https://example.com"}) 1`] = `
Object {
  "data": Object {
    "display_name": "test",
    "email": "test@example.com",
    "website": "https://example.com",
  },
  "errors": Array [],
}
`;

exports[`validate({}) 1`] = `
Object {
  "data": Object {},
  "errors": Array [
    Array [
      "email",
      "The email field cannot be empty.",
    ],
    Array [
      "displayName",
      "The display_name field cannot be empty.",
    ],
  ],
}
`;
